WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40496
fast/canvas/webgl/get-active-test.html failed in Chrome Mac
https://bugs.webkit.org/show_bug.cgi?id=40496
Summary
fast/canvas/webgl/get-active-test.html failed in Chrome Mac
Zhenyao Mo
Reported
2010-06-11 13:56:47 PDT
--- /b/slave/webkit-rel-mac-webkit-org/build/src/webkit/Release/../../../layout-test-results/fast/canvas/webgl/get-active-test-expected.txt +++ /b/slave/webkit-rel-mac-webkit-org/build/src/webkit/Release/../../../layout-test-results/fast/canvas/webgl/get-active-test-actual.txt @@ -25,13 +25,13 @@ PASS info[ii].type is expected[ii].type PASS info[ii].size is expected[ii].size PASS info2[ii] is non-null. -PASS info2[ii] is non-null. -PASS info2[ii].name is expected2[ii].name -PASS info2[ii].type is expected2[ii].type -PASS info2[ii].size is expected2[ii].size -PASS info2[ii].name is expected2[ii].name -PASS info2[ii].type is expected2[ii].type -PASS info2[ii].size is expected2[ii].size +FAIL info2[ii] should be non-null. Was null +FAIL info2[ii].name should be ival. Threw exception TypeError: Cannot read property 'name' of null +FAIL info2[ii].type should be 5124. Threw exception TypeError: Cannot read property 'type' of null +FAIL info2[ii].size should be 1. Threw exception TypeError: Cannot read property 'size' of null +FAIL info2[ii].name should be ival2[0]. Was u_modelViewProjMatrix. +FAIL info2[ii].type should be 5124. Was 35676. +FAIL info2[ii].size should be 2. Was 1. PASS context.getActiveAttrib(program, 2) is null PASS context.getError() is context.INVALID_VALUE PASS context.getActiveAttrib(program, -1) is null
Attachments
patch
(5.79 KB, patch)
2010-06-15 17:00 PDT
,
Zhenyao Mo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-06-11 13:57:51 PDT
Will roll out the failing part first, then investigate.
Zhenyao Mo
Comment 2
2010-06-11 14:35:33 PDT
Manually rolled out the failing part of the test:
http://trac.webkit.org/changeset/61038
Will add it back once this bug is fixed.
Zhenyao Mo
Comment 3
2010-06-15 17:00:33 PDT
Created
attachment 58838
[details]
patch Please review this first. Commit will wait until command-buffer port in Chrome is fixed.
Kenneth Russell
Comment 4
2010-06-15 17:49:18 PDT
Comment on
attachment 58838
[details]
patch Argh. Thanks for fixing this. Could you please fix the same bug in Chromium in src/chrome/renderer/webgraphicscontext3d_command_buffer_impl.cc ? Either that, or we should refactor the makeContextCurrent() calls into the GraphicsContext3DInternal class in WebKit/chromium/src/GraphicsContext3D.cpp so that ports don't need to remember to do this.
Zhenyao Mo
Comment 5
2010-06-15 17:56:00 PDT
(In reply to
comment #4
)
> (From update of
attachment 58838
[details]
) > Argh. Thanks for fixing this. > > Could you please fix the same bug in Chromium in src/chrome/renderer/webgraphicscontext3d_command_buffer_impl.cc ? Either that, or we should refactor the makeContextCurrent() calls into the GraphicsContext3DInternal class in WebKit/chromium/src/GraphicsContext3D.cpp so that ports don't need to remember to do this.
Yes, I'll fix the command_buffer port.
Kenneth Russell
Comment 6
2010-06-15 17:59:40 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > (From update of
attachment 58838
[details]
[details]) > > Argh. Thanks for fixing this. > > > > Could you please fix the same bug in Chromium in src/chrome/renderer/webgraphicscontext3d_command_buffer_impl.cc ? Either that, or we should refactor the makeContextCurrent() calls into the GraphicsContext3DInternal class in WebKit/chromium/src/GraphicsContext3D.cpp so that ports don't need to remember to do this. > > Yes, I'll fix the command_buffer port.
OK, thanks. This patch looks good, but we should consider refactoring where the makeCurrent() calls occur.
Dimitri Glazkov (Google)
Comment 7
2010-06-16 10:08:05 PDT
Comment on
attachment 58838
[details]
patch ok.
WebKit Commit Bot
Comment 8
2010-06-19 01:31:32 PDT
Comment on
attachment 58838
[details]
patch Clearing flags on attachment: 58838 Committed
r61471
: <
http://trac.webkit.org/changeset/61471
>
WebKit Commit Bot
Comment 9
2010-06-19 01:31:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug