2010-06-19  Zhenyao Mo  <zmo@google.com>

Reviewed by Dimitri Glazkov.

        fast/canvas/webgl/get-active-test.html failed in Chrome Mac
        https://bugs.webkit.org/show_bug.cgi?id=40496

        * fast/canvas/webgl/get-active-test-expected.txt: Test of two contexts and two programs, also test the uniform array name ends with "[0]".
        * fast/canvas/webgl/script-tests/get-active-test.js: Ditto.
2010-06-19  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        fast/canvas/webgl/get-active-test.html failed in Chrome Mac
        https://bugs.webkit.org/show_bug.cgi?id=40496

        * src/WebGraphicsContext3DDefaultImpl.cpp: Call makeContextCurrent().
        (WebKit::WebGraphicsContext3DDefaultImpl::getActiveAttrib):
        (WebKit::WebGraphicsContext3DDefaultImpl::getActiveUniform):
        (WebKit::WebGraphicsContext3DDefaultImpl::readPixels):

Canonical link: https://commits.webkit.org/52481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61471 268f45cc-cd09-0410-ab3c-d52691b4dbfc